fix: edit alt text and add responsive spacings

--- a/styles/includes/_overlap.scss
+++ b/styles/includes/_overlap.scss
@@ -19,11 +19,12 @@
 	}
 
 	&__wrapper {
-		margin-bottom: $spacing--800;
-		margin-top: $spacing--700;
+		@include spacing-700(margin-top);
+		@include spacing-800(margin-bottom);
 	}
 
 	&__item {
+		@include spacing-400(margin-top);
 		grid-row: 1;
 
 		&--img {
@@ -63,11 +64,12 @@
 	}
 
 	&__txt {
+		@include spacing-400(margin-left);
 		margin: auto;
-		padding-left: $spacing--400;
 		@include bp-xs() {
+			@include spacing-400(margin-top);
 			grid-row: 2;
-			padding-left: initial;
+			margin-left: initial;
 		}
 	}
 }
